Fix retrieve one element
